<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_push_open"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10.0dip"
        android:paddingLeft="18.0dip"
        android:paddingTop="18.0dip"
        android:text="@string/remind_mode"
        android:textColor="@color/bluedc"
        android:textSize="12.0sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/listview_divider_day" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56.0dip"
        android:orientation="horizontal"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip" >

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/remind_by_voice"
            android:textColor="@color/common_text"
            android:textSize="16.0sp" />

        <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
            android:id="@+id/remind_by_voice"
            android:layout_width="54dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="18.0dip"
        android:layout_marginRight="18.0dip"
        android:background="@color/listview_divider_day" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56.0dip"
        android:orientation="horizontal"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip" >

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/remind_by_shake"
            android:textColor="@color/common_text"
            android:textSize="16.0sp" />

        <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
            android:id="@+id/remind_by_shake"
            android:layout_width="54dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/listview_divider_day"
        android:visibility="gone" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10.0dip"
        android:paddingLeft="18.0dip"
        android:paddingTop="18.0dip"
        android:text="@string/push_items"
        android:textColor="@color/bluedc"
        android:textSize="12.0sp"
        android:visibility="gone" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/listview_divider_day"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:showDividers="middle"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/pl_row"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:background="@drawable/btn_list_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/ping_lun"
                    android:textColor="@color/common_text"
                    android:textSize="16.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_tips"
                    android:textColor="@color/color_88"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
                android:id="@+id/switch_comment"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/listview_divider_day" />

        <LinearLayout
            android:id="@+id/xh_row"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/xi_huan"
                    android:textColor="@color/common_text"
                    android:textSize="16.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_tips"
                    android:textColor="@color/color_88"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
                android:id="@+id/switch_like"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/listview_divider_day" />

        <LinearLayout
            android:id="@+id/gz_row"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:background="@drawable/btn_list_item_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/guan_zhu"
                    android:textColor="@color/common_text"
                    android:textSize="16.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_tips"
                    android:textColor="@color/color_88"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
                android:id="@+id/switch_follow"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/listview_divider_day" />

        <LinearLayout
            android:id="@+id/daily_row"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/jing_xuan"
                    android:textColor="@color/common_text"
                    android:textSize="16.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_tips"
                    android:textColor="@color/color_88"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
                android:id="@+id/switch_recommend"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/listview_divider_day" />

        <LinearLayout
            android:id="@+id/reward_row"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/reward"
                    android:textColor="@color/common_text"
                    android:textSize="16.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_tips"
                    android:textColor="@color/color_88"
                    android:textSize="12.0sp"
                    android:visibility="gone" />
            </LinearLayout>

            <com.njkj.yulian.ui.gui.togglebutton.button.ToggleButton
                android:id="@+id/switch_reward"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.39999998dip"
        android:background="@color/listview_divider_day" />

</LinearLayout>