<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.njkj.yulian.ui.activity.search.SearchActivity" >

    <include layout="@layout/include_search_title" />

    <LinearLayout
        android:id="@id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="38.0dip"
        android:layout_centerInParent="true"
        android:background="@color/black10"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_search_user"
            android:textColor="@color/bluelight" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_search_tag"
            android:textColor="@color/common_tv" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_search_content"
            android:textColor="@color/common_tv" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@id/view_pager"
        android:background="@color/search_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_layout" />

</LinearLayout>