<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <TextView
        android:id="@+id/tab1"
        android:layout_width="fill_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/personal"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dip"
            android:background="@color/listview_divider_day" />
    </LinearLayout>

    <TextView
        android:id="@+id/rl_store"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/_mystore"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dip"
            android:background="@color/listview_divider_day" />
    </LinearLayout>

    <TextView
        android:id="@+id/tab6"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/myintegral"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dip"
            android:background="@color/listview_divider_day" />
    </LinearLayout>

    <TextView
        android:id="@+id/tab7"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/_myfous"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/tab3"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/reward"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dip"
            android:background="@color/listview_divider_day" />
    </LinearLayout>

    <TextView
        android:id="@+id/tab4"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/evaluation"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dip"
            android:background="@color/listview_divider_day" />
    </LinearLayout>

    <TextView
        android:id="@+id/tab5"
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="@drawable/btn_list_item_bg"
        android:drawableRight="@drawable/gywm_icon_tiaozhuan_night"
        android:gravity="center_vertical"
        android:paddingLeft="18.0dip"
        android:paddingRight="18.0dip"
        android:singleLine="true"
        android:text="@string/praise"
        android:textColor="@color/common_text"
        android:textSize="16.0sp" />

</LinearLayout>