<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@id/mToolbar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/dark_grey" >

        <ViewFlipper
            android:id="@id/cancel_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:flipInterval="1000"
            android:gravity="center" >

            <ImageView
                android:id="@id/btn_back"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:padding="14dp"
                android:src="@drawable/image_edit_back" />

            <TextView
                android:id="@id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0sp"
                android:text="取消"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />
        </ViewFlipper>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="50.0dip"
            android:layout_marginRight="50.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/size169"
                style="@style/editTitleSize"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="16:9"
                android:visibility="invisible" />

            <TextView
                android:id="@id/size43"
                style="@style/editTitleSize"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/_filter"
                android:textSize="20sp" />

            <TextView
                android:id="@id/size11"
                style="@style/editTitleSize"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="1:1"
                android:visibility="invisible" />
        </LinearLayout>

        <ViewFlipper
            android:id="@id/done_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="5.0dip"
            android:flipInterval="1000"
            android:gravity="center" >

            <TextView
                android:id="@id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/save_btn"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />

            <TextView
                android:id="@id/next_apply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/next_apply"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />
        </ViewFlipper>
    </RelativeLayout>

</merge>